<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/celsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/ce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CELSIUS TO FAHRENEHIT" />

            <Button
                android:id="@+id/fa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fahrenheit a celsius" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area" />

                <Button
                    android:id="@+id/metro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/metro" />

                <Button
                    android:id="@+id/kilometro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometro" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Distancia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/distancia" />

                        <Button
                            android:id="@+id/metros"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/metros" />

                        <Button
                            android:id="@+id/centimetros"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/centimetros" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>